# tulik-player-pc

./: .gitignore  FEATURES.md  NATIVE_PARITY_PLAN.md  README.md  package.json
.github/workflows/: build-native.yml  build.yml
native/: Cargo.toml  README.md  build.rs
native/src/: api.rs  audio.rs  config.rs  main.rs  update.rs
src/: index.html
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/overrides/: canoli.json  gil.json  noodles.json  ohad.json  rambo.json
src-tauri/src/: main.rs
