[package]
name = "tulik-player-native"
version = "1.0.0"
edition = "2021"
description = "Fully native (no-webview) Windows player for MediaSage — egui UI + rodio/WASAPI audio"
build = "build.rs"

[[bin]]
name = "TulikPlayer"
path = "src/main.rs"

[dependencies]
eframe = { version = "0.29", default-features = false, features = ["glow", "default_fonts"] }
image = { version = "0.25", default-features = false, features = ["jpeg", "png"] }
rodio = { version = "0.19", default-features = false, features = ["symphonia-all"] }
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "multipart", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
# clipboard image read — "paste a screenshot" into the feedback form (web parity)
arboard = "3"

[build-dependencies]
image = { version = "0.25", default-features = false, features = ["png", "ico"] }

[target.'cfg(windows)'.build-dependencies]
winresource = "0.1"

[profile.release]
opt-level = 2
lto = "thin"
strip = true
